--- a/project/build.gradle
+++ b/project/build.gradle
@@ -1,29 +1,18 @@
 plugins {
-    // Apply the java plugin to add support for Java
     id 'java'
-
-    // Apply the application plugin to add support for building an application
-    id 'application'
 }
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
 repositories {
-    // Use jcenter for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    // This dependency is found on compile classpath of this component and consumers.
-    implementation 'com.google.guava:guava:27.0.1-jre'
-
     compile group: 'org.javassist', name: 'javassist', version: '3.24.1-GA'
-
-    // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
 }
 
-// Define the main class for the application
-mainClassName = 'ist.meic.pa.FunctionalProfiler.App'
+configurations {
+    jar.archiveName = "functionalProfiler.jar"
+}
