--- a/project/build.gradle
+++ b/project/build.gradle
@@ -1,9 +1,12 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
+
+mainClassName = 'ist.meic.pa.FunctionalProfiler.WithFunctionalProfiler'
 
 repositories {
     mavenCentral()
